--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <style>
     body {
       display: flex;
@@ -15,6 +17,14 @@
       height: 100vh;
       font-family: 'Outfit', sans-serif;
       text-transform: uppercase;
+    }
+
+    .material-symbols-outlined {
+      font-variation-settings:
+      'FILL' 0,
+      'wght' 400,
+      'GRAD' 0,
+      'opsz' 48
     }
 
     #image-upload {
@@ -86,6 +96,14 @@
       text-align: center;
       text-transform: uppercase;
     }
+
+    .btn {
+      display: flex;
+      align-items: center;
+    }
+    .btn .material-symbols-outlined {
+      margin-right: 5px;
+    }
   </style>
 </head>
 <body>
@@ -101,7 +119,11 @@
       <img id="preview-image" src="#"/>
     </div>
   </div>
-  <label id="handler" for="image-upload" class="btn btn-outline-dark mt-3">Carica immagine</label>
+  <label id="handler" for="image-upload">
+    <div class="btn btn-outline-dark mt-3">
+      <span class="material-symbols-outlined">upload</span><span>Upload image</span>
+    </div>
+  </label>
   <input type="file" id="image-upload" accept="image/*" />
 
 
