button icon and text changed

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   </div>
   <label id="handler" for="image-upload">
     <div class="btn btn-outline-dark mt-3">
-      <span class="material-symbols-outlined">upload</span><span>Upload image</span>
+      <span class="material-symbols-outlined">folder_open</span><span>Load image</span>
     </div>
   </label>
   <input type="file" id="image-upload" accept="image/*" />
