--- a/index.html
+++ b/index.html
@@ -148,6 +148,35 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
   
   <script>
+    const capture = async () => {
+      const canvas = document.createElement("canvas");
+      const context = canvas.getContext("2d");
+      const video = document.createElement("video");
+
+      let w = window.innerWidth, h = window.innerHeight;
+      canvas.width = w;
+      canvas.height = h;
+      document.body.appendChild(canvas);
+
+      try {
+        const captureStream = await navigator.mediaDevices.getDisplayMedia();
+        video.srcObject = captureStream;
+        debugger;
+        context.drawImage(video, 0, 0, w, h);
+        const frame = canvas.toDataURL("image/png");
+        /* setTimeout(() => {
+          captureStream.getTracks().forEach(track => track.stop());
+        }, 1000); */
+        // create a new image from the frame and append it to the body
+        const img = new Image();
+        img.src = frame;
+        document.body.appendChild(img);
+        return frame;
+      } catch (err) {
+        console.error("Error: " + err);
+      }
+    };
+
     function getLetterWidth(letter) {
       return Math.max(10, letter.width()) + 4;
     }
@@ -184,10 +213,10 @@
         }
         
         let offset = 0
-        if (/[i1' ]/i.test($this.text())) {
-          offset = -2;
+        if (/[1i' ]/i.test($this.text())) {
+          offset = -(inc / 2);
         } else if (/[o]/i.test($this.text())) {
-          offset = 1;
+          offset = inc / 10;
         }
 
         $this.css({
