--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       width: 400px;
       height: 400px;
       position: relative;
-      border-width: 50px;
+      /* border-width: 50px;
       border-style: solid;
       border-color: black;
-      border-radius: 50%;
+      border-radius: 50%; */
       overflow: hidden;
     }
 
@@ -109,12 +109,13 @@
 <body>
   <h1 class="p-3">Rockin'1000 frame</h1>
   <div id="container">
-    <div id="upper-text" class="r1000-text">
+    <!-- <div id="upper-text" class="r1000-text">
       <span></span>
     </div>
     <div id="lower-text" class="r1000-text">
       <span></span>
-    </div>
+    </div> -->
+    <img id="frame-img" src="r1000frame.png" style="position: absolute; z-index: 1; width: 400px;">
     <div id="frame">
       <img id="preview-image" src="#"/>
     </div>
@@ -127,7 +128,7 @@
   <input type="file" id="image-upload" accept="image/*" />
 
 
-  <div id="params" class="p-4 d-flex flex-column">
+  <!-- <div id="params" class="p-4 d-flex flex-column">
     <input type="text" id="upper-text-input" placeholder="top text" value="★ ★ ONE OF THE THOUSAND ★ ★" class="mt-3" />
     <input type="text" id="lower-text-input" placeholder="lower text" value="|||  ★ ★ ★ ROCKIN'1000 ★ ★ ★ |||" class="mt-3" />
     <div class="d-flex justify-content-center mt-3">
@@ -140,6 +141,11 @@
     <input type="range" id="upper-arc" name="upper-arc" min="0" max="360" value="180">
     <label for="lower-arc" class="p-3">lower arc (<span></span>°)</label>
     <input type="range" id="lower-arc" name="lower-arc" min="0" max="360" value="162">
+  </div> -->
+
+  <div id="preview">
+    <video id="preview-video" autoplay="" playsinline="" muted="" class="d-none"></video>
+    <!-- <canvas id="preview-canvas"></canvas> -->
   </div>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
@@ -148,6 +154,49 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
   
   <script>
+    const capture2 = async () => {
+      const options = {audio: true, video: true};
+      const displaySurface = "tab";
+      if (displaySurface !== 'default') {
+        options.video = {displaySurface};
+      }
+      let stream = await navigator.mediaDevices.getDisplayMedia(options)
+
+      const video = document.getElementById('preview-video');
+      // const video = document.createElement("video");
+      video.srcObject = stream;
+
+      // const canvas = document.getElementById("preview-canvas");
+      const canvas = document.createElement("canvas");
+      const context = canvas.getContext("2d");
+
+      let w = window.innerWidth, h = window.innerHeight;
+      canvas.width = w;
+      canvas.height = h;
+
+      setTimeout(() => {
+        context.drawImage(video, 0, 0, w, h);
+        const frame = canvas.toDataURL("image/png");
+        // $("#preview-video").hide();
+        stream.getTracks().forEach(track => track.stop());
+        const img = new Image();
+        img.src = frame;
+        document.body.appendChild(img);
+      }, 100);
+      // context.drawImage(video, 0, 0, w, h);
+      // const frame = canvas.toDataURL("image/png");
+      // const img = new Image();
+      // img.src = frame;
+      // document.body.appendChild(img);
+
+      // demonstrates how to detect that the user has stopped
+      // sharing the screen via the browser UI.
+      stream.getVideoTracks()[0].addEventListener('ended', () => {
+        console.error('The user has ended sharing the screen');
+        preferredDisplaySurface.disabled = false;
+      });
+    }
+
     const capture = async () => {
       const canvas = document.createElement("canvas");
       const context = canvas.getContext("2d");
@@ -156,10 +205,9 @@
       let w = window.innerWidth, h = window.innerHeight;
       canvas.width = w;
       canvas.height = h;
-      document.body.appendChild(canvas);
 
       try {
-        const captureStream = await navigator.mediaDevices.getDisplayMedia();
+        const captureStream = await navigator.mediaDevices.getDisplayMedia({audio: true, video: true});
         video.srcObject = captureStream;
         debugger;
         context.drawImage(video, 0, 0, w, h);
