--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
   </label>
   <input type="file" id="image-upload" accept="image/*" />
 
+  <button class="btn btn-outline-dark mt-3" onclick="saveAsImage()">
+    <span class="material-symbols-outlined">save_alt</span><span>Save as image</span>
+
 
   <!-- <div id="params" class="p-4 d-flex flex-column">
     <input type="text" id="upper-text-input" placeholder="top text" value="★ ★ ONE OF THE THOUSAND ★ ★" class="mt-3" />
@@ -143,10 +146,10 @@
     <input type="range" id="lower-arc" name="lower-arc" min="0" max="360" value="162">
   </div> -->
 
-  <div id="preview">
+  <!-- <div id="preview">
     <video id="preview-video" autoplay="" playsinline="" muted="" class="d-none"></video>
-    <!-- <canvas id="preview-canvas"></canvas> -->
-  </div>
+    <canvas id="preview-canvas"></canvas>
+  </div> -->
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -224,6 +227,19 @@
         console.error("Error: " + err);
       }
     };
+
+    //function to export #container as png with transparent background using html2canvas
+    function exportAsPNG() {
+      html2canvas(document.getElementById("container"), {
+        backgroundColor: null
+      }).then(function(canvas) {
+        var a = document.createElement('a');
+        // toDataURL defaults to png, so we need to request a jpeg, then convert for file download.
+        a.href = canvas.toDataURL("image/png").replace("image/png", "image/octet-stream");
+        a.download = 'somefilename.png';
+        a.click();
+      });
+    }
 
     function getLetterWidth(letter) {
       return Math.max(10, letter.width()) + 4;
