--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
   </label>
   <input type="file" id="image-upload" accept="image/*" />
 
-  <button class="btn btn-outline-dark mt-3" onclick="saveAsImage()">
-    <span class="material-symbols-outlined">save_alt</span><span>Save as image</span>
+  <button class="btn btn-outline-dark mt-3" onclick="exportAsPNG()">
+    <span class="material-symbols-outlined">save_alt</span><span>Save result</span>
 
 
   <!-- <div id="params" class="p-4 d-flex flex-column">
