--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div id="lower-text" class="r1000-text">
       <span></span>
     </div> -->
-    <img id="frame-img" src="r1000frame.png" style="position: absolute; z-index: 1; width: 400px;">
+    <img id="frame-img" src="R1K4Romagna-frame.png" style="position: absolute; z-index: 1; width: 400px;">
     <div id="frame">
       <img id="preview-image" src="#"/>
     </div>
@@ -237,7 +237,7 @@
         var a = document.createElement('a');
         // toDataURL defaults to png, so we need to request a jpeg, then convert for file download.
         a.href = canvas.toDataURL("image/png").replace("image/png", "image/octet-stream");
-        a.download = 'r1K4romagna-profile.png';
+        a.download = 'R1K4Romagna-profile.png';
         a.click();
       });
     }
